--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "elastic cache backend",
     "homepage": "https://www.neusta.com",
     "license": ["GPL-2.0+"],
-    "keywords": ["elasticsearch, cache"],
+    "keywords": ["elasticsearch", "cache", "typo3"],
     "version": "1.0.0",
     "require": {
         "ruflin/elastica": "^3.2"
