[TASK] Set version to 1.1.0

--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "type": "typo3-cms-extension",
     "description": "elastic cache backend",
     "homepage": "https://www.neusta.com",
-    "license": ["GPL-2.0+"],
+    "license": ["GPL-2.0-or-later"],
     "keywords": ["elasticsearch", "cache", "typo3"],
-    "version": "1.0.0",
+    "version": "1.1.0",
     "require": {
         "ruflin/elastica": "^3.2"
     },
