[TASK] update to accommodate Elasticsearch v6

--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "teamneusta/elasticcache",
+    "name": "test/elasticcache",
     "type": "typo3-cms-extension",
     "description": "elastic cache backend",
     "homepage": "https://www.neusta.com",
     "license": ["GPL-2.0-or-later"],
     "keywords": ["elasticsearch", "cache", "typo3"],
-    "version": "5.0.0",
+    "version": "6.0.0",
     "require": {
         "php": ">=7.4",
         "typo3/cms-core": "^10.4 || ^11.5",
-        "ruflin/elastica": "^5.0"
+        "ruflin/elastica": "^6.0"
     },
     "extra": {
         "typo3/cms": {
