--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
             "email": "t.kretschmann@neusta.de"
         }
     ],
-    "version": "2.1.0",
+    "version": "5.0.0",
     "require": {
-        "ruflin/elastica": "^3.2"
+        "php": ">=7.4",
+        "typo3/cms-core": "^10.4 || ^11.5",
+        "ruflin/elastica": "^5.0"
     },
     "extra": {
         "typo3/cms": {
@@ -36,6 +38,12 @@
     "autoload-dev": {
         "psr-4": {
             "TeamNeusta\\Elasticcache\\Tests\\": "Tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "typo3/cms-composer-installers": true,
+            "typo3/class-alias-loader": true
         }
     }
 }
